# rust-mint-nft

./: app.ts  build.sh  package-lock.json  package.json  util.ts
mint/: Cargo.toml
mint/src/: lib.rs
