[package]
name = "mint"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "1.10.26"
spl-token = {version="3.3.0",features=["no-entrypoint"]}
spl-associated-token-account = {version="1.0.5",features=["no-entrypoint"]}

[dev-dependencies]
solana-program-test="1.10.26"
solana-sdk="1.10.26"

[lib]
crate-type=["cdylib","lib"]